getStarted.css
/* GETTING STARTED SECTION */
.getting-started-section {
  display: flex;
  flex-wrap: wrap;
  height: 90vh;
  overflow: hidden;
  position: relative;
  user-select: none;
}

.resume-preview{
  flex: 0;
  transition: flex 0.5s ease-out;
}

.blurred-contents-container {
  flex: 1;
  height: 100%;
  overflow: scroll;
  min-width: 327px;
  background-color: rgb(247,249,252);
  filter: blur(5px);
  padding-left: 5vw;
  padding-bottom: 10vh;
  pointer-events: none;
  transition: all 0.5s ease;
}

.blurred-contents-container::-webkit-scrollbar {
  display: none;
}

.getting-started-section p {
  font-size: 20px;
  padding: 5vh 0;
}


.resume-inputs {
  display: flex;
  flex-wrap: wrap;
  gap: 15px;
  row-gap: 6vh;
}

.dropdown {
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.5s, margin 0.6s;
}

.input-container {
  flex: 1 1 calc(50% - 8px);
}

.input-field {
  width: 70%;
  font-size: 16px;
  background-color: rgb(239,242,249);
  border: none;
  height: 5vh;
  border-radius: 3px;
  padding: 0 8px;
}

.label {
  display: inline-block;
  white-space: nowrap;
  width: 104px;
  color: rgb(130,139,162);
}

.overlay-button {
  position: absolute;
  z-index: 10;
  bottom: 30%;
  left: 50%;
  transform: translateX(-50%);
  font-size: 20px;
  font-weight: 600;
  padding: 2.3vh 30px;
  color: white;
  background-color: rgb(26,145,240);
  border: none;
  border-radius: 4px;
}

.overlay-button:hover{
  background-color: rgb(20, 134, 228);
}

.overlay-button:active {
  background-color: rgb(19, 121, 204);
}

.add-more-button {
  display: block;
  background-color: transparent;
  margin-top: 40px;
  color: rgb(26,145,240);
  border: none;
  font-size: 16px;
}

